syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc StreamUsers(Empty) returns (stream UserResponse);
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  UserRole role = 5;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string firstName = 3;
  optional string lastName = 4;
  optional UserRole role = 5;
  optional bool isActive = 6;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  optional string search = 3;
  optional UserRole role = 4;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  UserRole role = 5;
  bool isActive = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message Empty {}

enum UserRole {
  USER = 0;
  ADMIN = 1;
  MODERATOR = 2;
}